Resolve unused parameter warning in ScriptedAnimationController.cpp. https://bugs.webkit.org/show_bug.cgi?id=120408

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2013-08-28
Reviewed by Darin Adler.

* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::setThrottled):

Canonical link: https://commits.webkit.org/138394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154754 268f45cc-cd09-0410-ab3c-d52691b4dbfc